[issue-#28] java docs and refactoring
- added `BeanProcessor` as super type for bean processors, ande made related to it changes in factory.
- added java docs to newly created annotations and classes
- instead of creating multiple objects, moved creating of DependencyResolver in one place and reuse it where needed
- check styles fixes